- project renamed to DomWires - extensions removed (will be placed to separate  repos)